--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "bank-demo": {
+    "jest-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/bank-demo",
+            "outputPath": "dist/jest-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,35 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "bank-demo:build"
+            "browserTarget": "jest-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "bank-demo:build:production"
+              "browserTarget": "jest-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "bank-demo:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": [],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ]
+            "browserTarget": "jest-demo:build"
           }
         },
         "lint": {
@@ -107,7 +90,7 @@
         }
       }
     },
-    "bank-demo-e2e": {
+    "jest-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +99,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "bank-demo:serve"
+            "devServerTarget": "jest-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "bank-demo:serve:production"
+              "devServerTarget": "jest-demo:serve:production"
             }
           }
         },
@@ -136,5 +119,5 @@
       }
     }
   },
-  "defaultProject": "bank-demo"
+  "defaultProject": "jest-demo"
 }
