--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "bank-demo",
+  "name": "jest-demo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.js",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test:watch": "jest --watch --no-coverage",
+    "server": "node server/index.js"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +21,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@briebug/jest": "^1.3.1",
+    "@briebug/jest-schematic": "^1.6.0",
+    "@types/faker": "^4.1.5",
+    "bulma": "^0.7.4",
     "core-js": "^2.5.4",
+    "faker": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -29,18 +36,15 @@
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/jest": "^24.0.11",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "express-mock-server": "^2.1.1",
+    "jest": "^24.3.1",
+    "jest-html-reporters": "^1.1.2",
+    "jest-preset-angular": "^7.0.1",
     "protractor": "~5.4.0",
+    "ts-jest": "^24.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
